# deacon

./: .clang-format  .classpath  .gitattributes  .gitignore  .gitmodules  .project  CMakeLists.txt  Makefile.Maia.hardware  Makefile.common  Makefile.template  README.md  maxdeep_rz3515a0_dfe_a.dot
.github/workflows/: buildAndTest.yml
MaxDeep/src/: MaxDeepCpuCode.cpp  MaxDeepKernel.maxj  MaxDeepManager.maxj
MaxDeep/src/maxdeep/: ConvolutionLayerCacheKernel.maxj  ConvolutionLayerParameter.maxj  ConvolutionLayerPostProcessKernel.maxj  FullyConnectedLayerCacheKernel.maxj  FullyConnectedLayerPostProcessKernel.maxj  MaxDeepEngineParameters.maxj  MaxDeepKernel.maxj  MaxDeepManager.maxj  MultiPumpedConvolveKernel.maxj  MultiPumpedDotProductKernel.maxj  PaddingKernel.maxj  PoolingLayerKernel.maxj  UnpaddingKernel.maxj
app/: CMakeLists.txt  README.md
app/dot_product/: CMakeLists.txt  DotProductKernel.java  DotProductManager.java
cmake/: Dependencies.cmake  FindGlog.cmake  Macros.cmake  Maxeler.cmake
data/scripts/: gen_data.py
evaluation/: .project  DebugGraph.dot  README.md  Resnet16FstGraph.dot  SIMGraph  SIMGraph.dot  runtest
evaluation/configs/: bottleneck-shortcut.toml  mobilenet-v1-intrseq.csv  mobilenet-v1-intrseq.toml  mobilenet-v1-par.toml  mobilenet-v1.toml  mobilenet-v2.toml  mobilenet_v1.toml  mobilenet_v2.toml  mobilenet_v2_last_padded.toml  mobilenet_v2_onnx.csv  mobilenet_v2_onnx.toml  resnet-18.toml  resnet_18_onnx.csv  resnet_18_onnx.toml  resnet_18_onnx_b16.toml  squeezenet-par.toml  squeezenet.toml  squeezenet1_1.toml  squeezenet1_1_last_padded.toml  squeezenet1_1_onnx.csv  squeezenet1_1_onnx.toml  vu9p.toml
evaluation/configs/explore/: mobilenet-v1-par-s16-b16-dsp_0_25.toml  mobilenet-v1-par-s16-b16-dsp_0_5.toml  mobilenet-v1-par-s16-b16.toml  mobilenet-v1-par-s16-b16_area.toml  mobilenet-v1-par-s16-b16_manual_1_2_area.toml  mobilenet-v1-par-s16.toml  mobilenet-v1-par-s16_manual_1.toml  mobilenet-v1-par-s16_manual_1_1-sanitize.toml  mobilenet-v1-par-s16_manual_1_1.toml  mobilenet-v1-par-s32.toml  mobilenet-v1-par-s4.toml  mobilenet-v1-par-s8.toml  mobilenet-v1-par.toml  mobilenet-v1-par_sa_dsp_0_80.toml  mobilenet-v1-par_sa_dsp_0_90.toml  mobilenet-v1-par_sa_dsp_0_90_incl_fst.toml  mobilenet-v1-searched.toml  mobilenet-v2-wb16.toml  mobilenet_v1-manual_1k.csv  mobilenet_v1-manual_1k.toml  mobilenet_v1-manual_5k.csv  mobilenet_v1-manual_5k.toml  mobilenet_v2-par-s12.toml  mobilenet_v2-par-s16.toml  mobilenet_v2-par-s2.toml  mobilenet_v2-par-s4.toml  mobilenet_v2-par-s8.toml  mobilenet_v2_onnx-manual_1.csv  mobilenet_v2_onnx-manual_1.toml  mobilenet_v2_onnx-manual_1_1.csv  mobilenet_v2_onnx-manual_1_1.toml  mobilenet_v2_onnx-manual_1_2.csv  mobilenet_v2_onnx-manual_1_2.toml  mobilenet_v2_onnx-manual_2.csv  mobilenet_v2_onnx-manual_2.toml  mobilenet_v2_onnx-manual_3.csv  mobilenet_v2_onnx-manual_3.toml  resnet-18-par-s2.toml  resnet-18-wb16.toml  resnet-18-wb8.toml  (+16 more)
evaluation/configs/test/: bottleneck-shortcut.toml  concat.toml  inverted-bottleneck.toml  residual.toml  resnet-18-fst-id-single.toml  resnet-18-fst-id.toml  resnet-18-fst-maxpool.toml  resnet-18-fst.toml  resnet-50-a.toml  (+12 more)
evaluation/data/: Conv2DKernel.csv  dotprod.csv
evaluation/maxlabor/: README.md  config.json  maxlabor.py
evaluation/model/: README.md  conv2d_model.m  conv2d_model_eval.m  dotprod_model.m  dotprod_model_eval.asv  dotprod_model_eval.m  multi_layers_throughput.m  num_node_reduce_tree.m
evaluation/notebooks/: explore-minlp copy.ipynb  explore-minlp.ipynb  preliminary-fusion.ipynb
evaluation/scripts/: convert.py  dotprod.py  dotprod.sh  explore.py  tool.py
evaluation/src/: DotProdCpuCode.cpp
evaluation/test/: DebugGraph.dot
evaluation/tools/: gen
experimental/dse/: roofline.py  utils.py
experimental/notebooks/: block_and_fusion.ipynb  depthwise separable model.ipynb  design.py  end2end.csv  explorer.py  fpga_platform.py  fpl18.ipynb  layer.py  layer_fusion.ipynb  layer_fusion_utils.py  net.py  perf_predict.ipynb  perf_predict.py  roofline.ipynb  utils.py
experimental/polyhedral/: bottleneck.cc
experimental/ruby/: .gitignore  README.md  btree.rby  btree_test.rby  btree_test_1.rby  btree_test_2.rby  btree_test_3.rby  btree_test_4.rby  btree_test_9.rby  bundle_test.rby  cnt.rby  cnt_test.rby  conv.rby  conv2d.rby  conv2d_test.rby  conv2dsys.rby  convT_test.rby  conv_test.rby  dotprod.rby  dotprod_test.rby  dp.rby  dp_test.rby  drop2d.rby  drop2d_test.rby  egs.rby  ev_test.rby  incs.rby  lbuf.rby  lbuf_test.rby  lenet.rby  pbrt.rby  pbrt_test.rby  pool2d.rby  pool2d_test.rby  prelude.rby  radd.rby  rc  relu.rby  util.rby
include/test/: utils.h
make/: Makefile.Lima.hardware  Makefile.common  Makefile.template
models/: lenet.prototxt
pydeacon/: graph.py
pyra/python/: setup.py
runtime/: CMakeLists.txt
runtime/python/: winograd.py
runtime/test/: CMakeLists.txt  main.cc  test_conv_tiling.cc  test_layers.cc
scripts/: DSE.py  DSE_cccad1.py  DSE_cccad2.py  cleaning_debug.py  cleaning_up_scratch.sh  convert.py  download_models.sh  dump.py  examine.py  import_manual.py  parse.py  plot_runtime.py  runtime.csv  scale.py  unittest
src/: CMakeLists.txt  ConvLayerKernel.maxj  FCLayerKernel.maxj  MaxDeepCpuCode.cpp  NetworkCpuCode.cpp  NetworkManager.maxj  PoolingLayerKernel.maxj  ReLULayerKernel.maxj  maxdeep.cpp
src/hardware/: CMakeLists.txt  MaxDeep.maxj
src/interface/: CMakeLists.txt  interface.cpp
src/maxdeep/: CMakeLists.txt  MaxDeep.maxj  MaxDeepEngineParameters.maxj  MaxDeepKernel.maxj  MaxDeepManager.maxj
src/proto/: CMakeLists.txt  maxdeep.proto
src/test/: CMakeLists.txt  test_cifar_10.cpp  test_cifar_10.prototxt  test_conv_layer.cpp  test_conv_layer.prototxt  test_fc_layer.cpp  test_fc_layer.prototxt  test_lenet.cpp  test_lenet.prototxt  test_pooling_layer.prototxt  test_relu_layer.cpp  test_relu_layer.prototxt  test_vgg.cpp  test_vgg.prototxt
test/pyra/: test_pyra_import.py
v1/: CMakeLists.txt  Makefile.common  Makefile.template
v1/src/: maxdeep.cpp
v2/scripts/: DSE.py  DSE_cccad2.py  parse.py  plot_runtime.py  runtime.csv
(+629 files in other folders)
